Fix #34351: Displacement map Bake margin does not work